Flight producer changes
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>